--- a/Prototype/main.css
+++ b/Prototype/main.css
@@ -11,18 +11,41 @@ body {
 }
 
 #content {
-    width: 20rem;
+    width: 40rem;
     padding-top: 2rem;
     margin: 0 auto;
 }
 
+.buffs {
+    display: flex;
+    min-height: 1.5em;
+}
+.buff {
+    font-size: 0.7rem;
+    margin: 0.1rem;
+    padding: 0.1rem 0.5rem;
+    border: 1px solid #eee;
+    border-radius: 2px;
+}
+
 .card {
+    display: flex;
     background: hsla(30, 70%, 70%, 1);
     border: 1px solid hsla(30, 70%, 30%, 1);
     padding: 1rem;
 
-    width: 20rem;
-    height: 20rem;
+    width: 40rem;
+    min-height: 30rem;
+}
+
+.card-image, .card-content {
+    flex: 1;
+    margin: 0.3rem;
+}
+
+.card-image {
+    border: 1px solid #000;
+    background: hsla(30, 70%, 60%, 1);
 }
 
 .card-title {
@@ -37,18 +60,6 @@ body {
 .card-desc {
     font-style: italic;
     white-space: pre-wrap;
-}
-
-.buffs {
-    display: flex;
-    min-height: 1.5em;
-}
-.buff {
-    font-size: 0.7rem;
-    margin: 0.1rem;
-    padding: 0.1rem 0.5rem;
-    border: 1px solid #eee;
-    border-radius: 2px;
 }
 
 .options {
@@ -70,27 +81,4 @@ body {
 
 .option:hover {
     background:  hsla(30, 70%, 90%, 1);
-}
-
-.resolution {
-    background: hsla(30, 70%, 70%, 1);
-    border: 1px solid hsla(30, 70%, 30%, 1);
-    padding: 1rem;
-
-    width: 20rem;
-    height: 20rem;
-}
-
-.resolution-title {
-    font-size: 2em;
-    font-weight: bold;
-
-    border-bottom: 1px solid hsla(30, 70%, 30%, 1);
-    margin-top: 1rem;
-    margin-bottom: 1rem;
-}
-
-.resolution-desc {
-    font-style: italic;
-    white-space: pre-wrap;
 }
